--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yirenwx",
   "version": "1.0.0",
-  "description": "亿人电贸微信",
+  "description": "亿人共享微信",
   "author": "zxlp1023 <zxlp1023@qq.com>",
   "private": true,
   "scripts": {
